--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
@@ -20,6 +19,8 @@
     "mini-css-extract-plugin": "^1.3.4",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "style-loader": "^2.0.0",
     "three": "^0.124.0",
     "webpack": "^5.14.0",
@@ -41,5 +42,9 @@
   "bugs": {
     "url": "https://github.com/pj-25/graphicsAI/issues"
   },
-  "homepage": "https://github.com/pj-25/graphicsAI#readme"
+  "homepage": "https://github.com/pj-25/graphicsAI#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7"
+  }
 }
