--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "css-loader": "^5.0.1",
+    "dat.gui": "^0.7.9",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "mini-css-extract-plugin": "^1.3.4",
@@ -36,12 +37,12 @@
   "homepage": "https://github.com/pj-25/graphicsAI#readme",
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.0.0-alpha.7",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "html-webpack-plugin": "^5.0.0-alpha.7",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2",
