--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -12,6 +12,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+        fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
     - name: Clean build folder
     - run: |
@@ -33,7 +36,7 @@ jobs:
           git commit -m "Update build files"
     
     - name: Push Changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@v0.6.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         force: true
