--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -17,7 +17,7 @@ jobs:
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
     - name: Clean build folder
-    - run: |
+      run: |
         rm dist/*
         git rm dist/*
 
