--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Clean build folder
       run: |
-        rm dist/*.* -f
+        find dist -maxdepth 1 -type f -delete
         git rm dist/* -f
 
     - name: Build dist
