--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "css-loader": "^5.0.1",
     "dat.gui": "^0.7.9",
     "file-loader": "^6.2.0",
+    "firebase": "^9.9.0",
     "html-loader": "^1.3.2",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^1.3.4",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
